# Riyadh_UHI_Analysis

./: README.md  Riyadh_Statistical_Analysis_5_6.xlsx  main.py  main01.py  pyproject.toml
.claude/: settings.local.json
Datasets/LST/: lst_1990.tif.aux.xml  lst_1990.tif.xml  lst_1995.tif.aux.xml  lst_1995.tif.xml  lst_2001.tif.aux.xml  lst_2001.tif.xml  lst_2014.tif.aux.xml  lst_2014.tif.xml  lst_2019.tif.aux.xml  lst_2019.tif.xml  lst_2025.tif.aux.xml  lst_2025.tif.xml
Datasets/LUL_Classified/: LULC_1990.tif.aux.xml  LULC_1990.tif.ovr  LULC_1990.tif.vat.dbf  LULC_1995.tfw  LULC_1995.tif.aux.xml  LULC_1995.tif.ovr  LULC_1995.tif.vat.dbf  LULC_2001.tif.aux.xml  LULC_2001.tif.ovr  LULC_2001.tif.vat.dbf  LULC_2014.tif.aux.xml  LULC_2014.tif.ovr  LULC_2014.tif.vat.dbf  LULC_2019.tif.aux.xml  LULC_2019.tif.ovr  LULC_2019.tif.vat.dbf  LULC_2025.tif.aux.xml  LULC_2025.tif.ovr  LULC_2025.tif.vat.dbf  LULC_2025.tif.vat.dbf.xml
Datasets/Riyadh_Boundary/: Riyadh City.dbf  Riyadh City.sbn  Riyadh City.sbx  Riyadh City.shp  Riyadh City.shp.xml  Riyadh City.shx
Datasets/UHI_Classified/: Reclass_UHI_1990.tif.aux.xml  Reclass_UHI_1990.tif.ovr  Reclass_UHI_1990.tif.vat.dbf  Reclass_UHI_1995.tif.aux.xml  Reclass_UHI_1995.tif.ovr  Reclass_UHI_1995.tif.vat.dbf  Reclass_UHI_2001.tif.aux.xml  Reclass_UHI_2001.tif.ovr  Reclass_UHI_2001.tif.vat.dbf  Reclass_UHI_2014.tif.aux.xml  Reclass_UHI_2014.tif.ovr  Reclass_UHI_2014.tif.vat.dbf  Reclass_UHI_2019.tif.aux.xml  Reclass_UHI_2019.tif.ovr  Reclass_UHI_2019.tif.vat.dbf  Reclass_UHI_2025.tif.aux.xml  Reclass_UHI_2025.tif.ovr  (+1 more)
