[project]
name = "riyadh-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.14"
dependencies = [
    "esda>=2.9.0",
    "geopandas>=1.1.3",
    "libpysal>=4.14.1",
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "openpyxl>=3.1.5",
    "pandas>=3.0.1",
    "pysal>=25.7",
    "rasterio>=1.4.4",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
]
